fixed hover animation and icon alignment in footer
Icons were not properly centered in the footer, upon hover the edged were cut off on the zoom (especially twitter)

--- a/themes/nav-community-v1/static/css/style.css
+++ b/themes/nav-community-v1/static/css/style.css
@@ -1580,6 +1580,33 @@ textarea:-moz-placeholder {
 .inner-section {
     color: #ffffff;
 }
+
+.themeix-tool{
+	scale: 0.9;
+}
+.themeix-tool:hover{
+	transform: scale(0.9)!important;
+	-webkit-animation: social 1s;
+    animation: social 1s;
+}
+@-webkit-keyframes social {
+      0% { transform: scale(0.9); }
+	 50% { transform: scale(1); }
+    100% { transform: scale(0.9); }
+}
+
+@keyframes social {
+       0% { transform: scale(0.9); }
+	 50% { transform: scale(1); }
+    100% { transform: scale(0.9); }
+}
+
+a.themeix-tool .fa {
+    color: #FFFFFF;
+    font-size: 24px;
+    text-indent: .6px;
+}
+
 /* ==========================================
            18. scrollUP
    ========================================== */
@@ -3409,15 +3436,6 @@ ul li.cat-item a {
   display: table;
   position: relative;
   width: 100%;
-}
-
-body.roadmap-row .row, body.projects .row:nth-of-type(2) {
-	margin-left: 0px;
-	margin-right: 0px;
-}
-
-.col-sm-12 {
-	padding: 0px;
 }
 
 .roadmap-table:last-child .roadmap-connector {
